--- a/config/Config.tex
+++ b/config/Config.tex
@@ -76,6 +76,7 @@ final             % draft beschleunigt die Kompilierung
 % Deutsche Anführungszeichen
 \usepackage[babel]{csquotes}
 
+
 % Konfiguration der Abbildungs- und Tabellenbezeichnungen
 \usepackage[format=hang, font={footnotesize, sf}, labelfont=bf, justification=raggedright,singlelinecheck=false]{caption}
 
@@ -219,6 +220,8 @@ final             % draft beschleunigt die Kompilierung
 \usepackage[english,capitalise]{cleveref}
 
 \microtypecontext{spacing=nonfrench}
+\usepackage{eurosym}
+\usepackage{float}
 
 \input{config/Abkuerzungen}
 \makeglossaries\makeglossaries 
